doubly linked list...

--- a/CodingExamples/StringManipulation/StringManipulation.vcxproj.filters
+++ b/CodingExamples/StringManipulation/StringManipulation.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LinkedList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="StringManipulation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LinkedListStuff.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
