--- a/CodingExamples/StringManipulation/StringManipulation.vcxproj.filters
+++ b/CodingExamples/StringManipulation/StringManipulation.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="Hashtable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AddLinkedList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
