Binary Tree manipulation
Binary insertion and printing

--- a/CodingExamples/StringManipulation/StringManipulation.vcxproj.filters
+++ b/CodingExamples/StringManipulation/StringManipulation.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Hashtable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BinaryTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LinkedListStuff.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AddLinkedList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BinaryTrees.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
