--- a/CodingExamples/StringManipulation/StringManipulation.vcxproj
+++ b/CodingExamples/StringManipulation/StringManipulation.vcxproj
@@ -79,6 +79,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BinaryTree.h" />
     <ClInclude Include="Hashtable.h" />
     <ClInclude Include="LinkedList.h" />
     <ClInclude Include="stdafx.h" />
@@ -86,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AddLinkedList.cpp" />
+    <ClCompile Include="BinaryTrees.cpp" />
     <ClCompile Include="Hashtable.cpp" />
     <ClCompile Include="LinkedListStuff.cpp" />
     <ClCompile Include="stdafx.cpp">
