--- a/Interview_NewDawn/Interview_NewDawn/Interview_NewDawn.vcxproj
+++ b/Interview_NewDawn/Interview_NewDawn/Interview_NewDawn.vcxproj
@@ -144,12 +144,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicLinkedList.h" />
+    <ClInclude Include="StacksQueues.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BasicLibraries.cpp" />
     <ClCompile Include="BasicLinkedList.cpp" />
+    <ClCompile Include="StacksQueues.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
