--- a/Interview_NewDawn/Interview_NewDawn/Interview_NewDawn.vcxproj.filters
+++ b/Interview_NewDawn/Interview_NewDawn/Interview_NewDawn.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="BasicLinkedList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StacksQueues.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BasicLinkedList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StacksQueues.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
