--- a/Interview_NewDawn/Interview_NewDawn/Interview_NewDawn.vcxproj
+++ b/Interview_NewDawn/Interview_NewDawn/Interview_NewDawn.vcxproj
@@ -144,13 +144,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicLinkedList.h" />
+    <ClInclude Include="OneoffAlgorithms.h" />
     <ClInclude Include="StacksQueues.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TreesGraphs.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BasicLibraries.cpp" />
     <ClCompile Include="BasicLinkedList.cpp" />
+    <ClCompile Include="OneoffAlgorithms.cpp" />
     <ClCompile Include="StacksQueues.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
