--- a/Interview_NewDawn/Interview_NewDawn/Interview_NewDawn.vcxproj.filters
+++ b/Interview_NewDawn/Interview_NewDawn/Interview_NewDawn.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="StacksQueues.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TreesGraphs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OneoffAlgorithms.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -42,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="StacksQueues.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OneoffAlgorithms.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
